--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/three": "^0.181.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "maath": "^0.10.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
